--- a/src/App.css
+++ b/src/App.css
@@ -232,18 +232,29 @@ span {
 .reseauSociauxCnx {
   display: flex;
   flex-direction: column;
-  width: 25%;
+  width: 20%;
   margin: 0 auto;
+  justify-content: space-between;
 }
 /* Fin Modif */
 
 /* Ajout */
 .github {
   margin: 15px;
+  padding: 15px;
+  color: blueviolet;
 }
 
-.facebook {
-  margin: 15px;
+/* .facebook {
+  margin: 25px;
+  border-radius: 2px !important;
+} */
+
+.kep-login-facebook {
+  border-radius: 20px !important;
+  width: 70%;
+  margin-left: 25px;
+  height: 10%;
 }
 
 .google {
